--- a/webapp/index.html
+++ b/webapp/index.html
@@ -66,7 +66,7 @@
     }
   </script>
 
-  <script async type="text/javascript" src="js/imguiapp.js"></script>
+  <script async type="text/javascript" src="js/app.js"></script>
 
 </body>
 
