Add notification button, which triggers a browser notifiaction. Made some improvements to CMakeLists.txt to facilitate.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,10 +13,11 @@
     }
 
     .emscripten {
-      padding-right: 0;
-      margin-left: auto;
-      margin-right: auto;
       display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
     }
 
     div.emscripten {
@@ -37,37 +38,66 @@
 
 <body>
 
-  <div class="emscripten_border">
-    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
-  </div>
-
-  <script type='text/javascript'>
-    var Module = {
-      preRun: [],
-      postRun: [],
-      print: (function () { })(),
-      printErr: function (text) { },
-      canvas: (function () {
-        var canvas = document.getElementById('canvas');
-        // As a default initial behavior, pop up an alert when webgl context is lost. To make your
-        // application robust, you may want to override this behavior before shipping!
-        // See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
-        canvas.addEventListener("webglcontextlost", function (e) { alert('WebGL context lost. You will need to reload the page.'); e.preventDefault(); }, false);
-        return canvas;
-      })(),
-      setStatus: function (text) { },
-      totalDependencies: 0,
-      monitorRunDependencies: function (left) { }
-    };
-    window.addEventListener('resize', js_resizeCanvas, false);
-    function js_resizeCanvas() {
-      document.getElementById('canvas').width = window.innerWidth;
-      document.getElementById('canvas').height = window.innerHeight;
-    }
-  </script>
-
-  <script async type="text/javascript" src="js/app.js"></script>
+  <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
 
 </body>
+
+<script type='text/javascript'>
+  var Module = {
+    preRun: [],
+    postRun: [],
+    print: (function () { })(),
+    printErr: function (text) { },
+    canvas: (function () {
+      var canvas = document.getElementById('canvas');
+      // As a default initial behavior, pop up an alert when webgl context is lost. To make your
+      // application robust, you may want to override this behavior before shipping!
+      // See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
+      canvas.addEventListener("webglcontextlost", function (e) { alert('WebGL context lost. You will need to reload the page.'); e.preventDefault(); }, false);
+      return canvas;
+    })(),
+    setStatus: function (text) { },
+    totalDependencies: 0,
+    monitorRunDependencies: function (left) { }
+  };
+
+  window.addEventListener('resize', js_resizeCanvas, false);
+
+  function resizeCanvas() {
+    document.getElementById('canvas').width = window.innerWidth;
+    document.getElementById('canvas').height = window.innerHeight;
+  }
+
+  function notifyMessage(message) {
+    console.log(message);
+
+    // Let's check if the browser supports notifications
+    if (!("Notification" in window)) {
+      alert("This browser does not support desktop notification");
+    }
+
+    // Let's check whether notification permissions have already been granted
+    else if (Notification.permission === "granted") {
+      // If it's okay let's create a notification
+      var notification = new Notification(message);
+    }
+
+    // Otherwise, we need to ask the user for permission
+    else if (Notification.permission !== "denied") {
+      Notification.requestPermission().then(function (permission) {
+        // If the user accepts, let's create a notification
+        if (permission === "granted") {
+          var notification = new Notification(message);
+        }
+      });
+    }
+
+    // At last, if the user has denied notifications, and you
+    // want to be respectful there is no need to bother them any more.
+  }
+
+</script>
+
+<script async type="text/javascript" src="js/app.js"></script>
 
 </html>
