--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
   <title>ImGui App</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+
   <style>
     body {
       font-family: arial;
